{
  "version": 4,
  "terraform_version": "1.2.0",
  "serial": 26,
  "lineage": "7de302eb-459a-bd1e-8721-b9e2de2130d1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08e8193efff221cd8",
            "arn": "arn:aws:ec2:eu-west-2:540805962146:instance/i-00578e1584f71f86d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00578e1584f71f86d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mtckey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04ae0beee34faee68",
            "private_dns": "ip-10-123-1-7.eu-west-2.compute.internal",
            "private_ip": "10.123.1.7",
            "public_dns": "ec2-35-177-178-144.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.178.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-011c986c6a90e117f",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ddef8a390a269d29",
            "tags": {
              "Name": "dev-node"
            },
            "tags_all": {
              "Name": "dev-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03cf33cba3c10fc65"
            ]
          },
          "dependencies": [
            "aws_key_pair.mtc_auth",
            "aws_security_group.mtc_sg",
            "aws_subnet.mtc_public_subnet",
            "aws_vpc.mtc_vpc",
            "data.aws_ami.server_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mtc_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:540805962146:internet-gateway/igw-078cc415eb073abb5",
            "id": "igw-078cc415eb073abb5",
            "owner_id": "540805962146",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0595a9839c83e48ee"
          },
          "dependencies": [
            "aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-078cc415eb073abb5",
            "id": "r-rtb-07a8cfd73e45de9fd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07a8cfd73e45de9fd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mtc_internet_gateway",
            "aws_route_table.mtc_public_rt",
            "aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mtc_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:540805962146:route-table/rtb-07a8cfd73e45de9fd",
            "id": "rtb-07a8cfd73e45de9fd",
            "owner_id": "540805962146",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-078cc415eb073abb5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_public_rt"
            },
            "tags_all": {
              "Name": "dev_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0595a9839c83e48ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mtc_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1e0f5183e65f20a",
            "route_table_id": "rtb-07a8cfd73e45de9fd",
            "subnet_id": "subnet-0ddef8a390a269d29"
          },
          "dependencies": [
            "aws_route_table.mtc_public_rt",
            "aws_subnet.mtc_public_subnet",
            "aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mtc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:540805962146:security-group/sg-03cf33cba3c10fc65",
            "description": "dev security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03cf33cba3c10fc65",
            "ingress": [
              {
                "cidr_blocks": [
                  "95.145.121.136/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dev_sg",
            "name_prefix": "",
            "owner_id": "540805962146",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0595a9839c83e48ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mtc_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:540805962146:subnet/subnet-0ddef8a390a269d29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddef8a390a269d29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "540805962146",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public"
            },
            "tags_all": {
              "Name": "dev-public"
            },
            "vpc_id": "vpc-0595a9839c83e48ee"
          },
          "dependencies": [
            "aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mtc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:540805962146:vpc/vpc-0595a9839c83e48ee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-0affdb852493682ea",
            "default_route_table_id": "rtb-0b7363e4279f1ccd6",
            "default_security_group_id": "sg-032c27505d52e10cd",
            "dhcp_options_id": "dopt-0cd25392cf2a8ddeb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0595a9839c83e48ee",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b7363e4279f1ccd6",
            "owner_id": "540805962146",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            }
          }
        }
      ]
    }
  ]
}